--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="frame">
+        <div class="screen"></div>
+        <div class="btn-container">
+            <button class="btn">CLEAR</button>
+            <button class="btn">DELETE</button>
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn operators">/</button>
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">X</button>
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn operators">-</button>
+            <button class="btn">.</button>
+            <button class="btn">0</button>
+            <button class="btn operators" id="result">=</button>
+            <button class="btn  operators">+</button>
+        </div>
+    </div>
 <script src="script.js"></script>    
 </body>
 </html>
