--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button class="btn">4</button>
             <button class="btn">5</button>
             <button class="btn">6</button>
-            <button class="btn">X</button>
+            <button class="btn">*</button>
             <button class="btn">1</button>
             <button class="btn">2</button>
             <button class="btn">3</button>
