Replaced eval with custom functions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="frame">
-        <div class="screen"></div>
+        <div class="screen">
+        <div class="subscreen"></div>
+        <div class="main-screen"></div>
+        </div>
         <div class="btn-container">
             <button class="btn">CLEAR</button>
             <button class="btn">DELETE</button>
@@ -20,7 +23,7 @@
             <button class="btn">4</button>
             <button class="btn">5</button>
             <button class="btn">6</button>
-            <button class="btn">*</button>
+            <button class="btn operators">X</button>
             <button class="btn">1</button>
             <button class="btn">2</button>
             <button class="btn">3</button>
